Fix Line Item wrong type

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -936,6 +936,7 @@ en:
           attributes:
             base:
               invalid_invoice_state: "Invalid invoice state"
+              invalid_line_item_type: "Invalid Line item type"
 
         web_hook:
           attributes:
