--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,9 @@ en:
     apicast_version_not_upgraded: 'The APIcast version for this service could not be upgraded'
     oidc_not_available_on_old_apicast: 'OpenID Connect is not supported for the old APIcast. Pick a different authentication option before reverting back.'
     edit_deployment_configuration: 'edit %{deployment} configuration'
+  logos_controller:
+    update_success: 'Logo was successfully created.'
+    destroy_success: 'Your logo was successfully deleted.'
 
   access_token_options:
     finance: 'Billing API'
