--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,8 +24,8 @@ en:
     oidc_not_available_on_old_apicast: 'OpenID Connect is not supported for the old APIcast. Pick a different authentication option before reverting back.'
     edit_deployment_configuration: 'edit %{deployment} configuration'
   logos_controller:
-    update_success: 'Logo was successfully created.'
-    destroy_success: 'Your logo was successfully deleted.'
+    update_success: 'The logo was successfully uploaded.'
+    destroy_success: 'The logo was successfully deleted.'
 
   access_token_options:
     finance: 'Billing API'
