--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -807,6 +807,7 @@ en:
         invalid: 'invalid'
         invalid_event: 'cannot transition when %{state}'
         invalid_transition: 'cannot transition via "%{event}"'
+        not_path_format: 'must be a path separated by "/". E.g. "" or "my/path"'
       models:
         authentication/by_access_token/access_token:
           attributes:
