--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -453,6 +453,9 @@ en:
     applications:
       edit:
         delete_confirmation: Are you sure you want to delete this application?
+    backend_apis:
+      edit:
+        delete_confirmation: "Are you sure you want to delete the backend '%{name}'?"
     services:
       forms:
         definition_settings:
