explain new oidc fields and re-order and improve structure fields for all auth patterns

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1246,8 +1246,10 @@ en:
         secret_token: |
           Enables you to block any direct developer requests to your API backend; each 3scale API gateway call to your API backend contains a request header called <code>X-3scale-proxy-secret-token</code>.
           The value of this header can be set by you here. It's up to you ensure your backend only allows calls with this secret header.
+        jwt_claim_with_client_id_type: |
+          Process the ClientID Token Claim value as a string or as a liquid template. When set to 'Liquid' you can define more complex rules. e.g. If 'some_claim' is an array you can select the first value this like {{ some_claim | first }}. 
         jwt_claim_with_client_id: |
-          Location of the ClientID in the JWT token. Example: azp
+          The Token Claim that contains the clientID. Defaults to 'azp'.
 
 
       service:
