changes update button's text

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1270,7 +1270,7 @@ en:
       proxy:
         update: "%{action} Staging Environment"
       policies:
-        update: "Update"
+        update: "Update Policy Chain"
     labels:
       service:
         intentions_required: "Signup requires a description of intended use"
