--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -857,6 +857,8 @@ en:
                 'wildcards' - words inside curly brackets ('{}')
         backend_api:
           attributes:
+            base:
+              cannot_be_destroyed_with_products: cannot be deleted because it is used by at least one Product
             private_endpoint:
               invalid: "the accepted format is 'http(s)://address(:port)(/path)'"
         proxy:
@@ -1247,7 +1249,7 @@ en:
           Enables you to block any direct developer requests to your API backend; each 3scale API gateway call to your API backend contains a request header called <code>X-3scale-proxy-secret-token</code>.
           The value of this header can be set by you here. It's up to you ensure your backend only allows calls with this secret header.
         jwt_claim_with_client_id_type: |
-          Process the ClientID Token Claim value as a string or as a liquid template. When set to 'Liquid' you can define more complex rules. e.g. If 'some_claim' is an array you can select the first value this like {{ some_claim | first }}. 
+          Process the ClientID Token Claim value as a string or as a liquid template. When set to 'Liquid' you can define more complex rules. e.g. If 'some_claim' is an array you can select the first value this like {{ some_claim | first }}.
         jwt_claim_with_client_id: |
           The Token Claim that contains the clientID. Defaults to 'azp'.
 
