--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -655,10 +655,12 @@ en:
 
   time:
     formats:
-      default: "%d %b %Y %H:%M:%S %Z"
+      default: "%Y-%m-%d %H:%M:%S (%Z)"
+      long: "%Y-%m-%d %H:%M:%S (%Z)"
   date:
     formats:
-      month: '%B %Y'
+      long: "%Y-%m-%d %H:%M:%S (%Z)"
+      month: '%Y-%m'
 
   number:
     human:
