--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -886,6 +886,11 @@ en:
         service_plan:
           has_contracts: 'This service plan cannot be deleted! At least one contract depends on it.'
 
+        service:
+          attributes:
+            system_name:
+              invalid: invalid. Only ASCII letters, numbers, dashes and underscores are allowed.
+
         cinstance:
           attributes:
             plan:
@@ -1138,8 +1143,6 @@ en:
       create:
         notice: "%{resource_type} created."
         errors:
-          name: "Name can't be blank."
-          system_name: "System name invalid. Only ASCII letters, numbers, dashes and underscores are allowed."
           default: "Couldn't create %{resource_type}. Check your Plan limits"
       update:
         notice: "%{resource_type} information updated."
