--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  # start documentation links
   docs:
     base_url: 'https://access.redhat.com/documentation/en-us/%{major_and_minor_version_path}/html'
     hero_api_portal: '%{docs_base_url}/creating_the_developer_portal/hero-api-portal'
@@ -6,6 +7,24 @@ en:
       email_configuration: '%{docs_base_url}/creating-developer-portal/email-configuration'
       liquid_reference: '%{docs_base_url}/liquid_reference/index'
     terminology: '%{docs_base_url}/terminology'
+
+  api:
+    integrations:
+      proxy:
+        documentation_hosted_url: '%{docs_base_url}/deployment-options/apicast-hosted'
+        documentation_apicast_url: '%{docs_base_url}/deployment-options/apicast-overview'
+        documentation_self_managed_url: '%{docs_base_url}/deployment-options/apicast-self-managed-nginx-config-files'
+        documentation_oauth_url: '%{docs_base_url}/deployment-options/apicast-oauth-before-may-2017'
+        documentation_response_codes_tracking_url: '%{docs_base_url}/admin_portal_guide/response-codes-tracking'
+        documentation_create_active_doc_spec: "%{docs_base_url}/providing_apis_in_the_developer_portal/create-activedocs-spec"
+
+  admin:
+    api_docs:
+      base:
+        index:
+          update_link: "%{docs_base_url}/api-documentation/activedocs-migrate"
+  # end documentation links
+
   api_integrations_controller:
     promote_to_production_success: 'Staging configuration promoted to production'
     promote_to_production_error: "Couldn't promote Staging configuration to production"
@@ -122,7 +141,6 @@ en:
       base:
         index:
           update_link_text: "Learn how to upgrade to Swagger 2"
-          update_link: "%{docs_base_url}/api-documentation/activedocs-migrate"
 
   admin_sections:
     partners: Accounts -- Applications
@@ -528,12 +546,6 @@ en:
         disabled_html: "Not deployed. <a href='%{list}'>See the history.</a>"
 
         visit_documentation: 'documentation'
-        documentation_hosted_url: '%{docs_base_url}/deployment-options/apicast-hosted'
-        documentation_apicast_url: '%{docs_base_url}/deployment-options/apicast-overview'
-        documentation_self_managed_url: '%{docs_base_url}/deployment-options/apicast-self-managed-nginx-config-files'
-        documentation_oauth_url: '%{docs_base_url}/deployment-options/apicast-oauth-before-may-2017'
-        documentation_response_codes_tracking_url: '%{docs_base_url}/admin_portal_guide/response-codes-tracking'
-        documentation_create_active_doc_spec: "%{docs_base_url}/providing_apis_in_the_developer_portal/create-activedocs-spec"
 
         proxy_rule_catch_all_warning: |
           "Catch all" Mapping Rules often lead to double counts when more specific rules are added.
