Support websocket protocol in BackendApi (#1527)
* Support websocket protocol in BackendApi

THREESCALE-916
This commit allows the BackendApi to accept websocket protocol (ws://
and wss://) in the private_endpoint attribute.

* Change the message to use scheme instead of protocol
* Change the api_backend message

Co-authored-by: Guilherme Cassolato <guicassolato@gmail.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -858,11 +858,11 @@ en:
             base:
               cannot_be_destroyed_with_products: cannot be deleted because it is used by at least one Product
             private_endpoint:
-              invalid: "the accepted format is 'http(s)://address(:port)(/path)'"
+              invalid: "the accepted format is 'scheme://address(:port)(/path)'. Accepted schemes are http, https, ws and wss"
         proxy:
           attributes:
             api_backend:
-              invalid: "the accepted format is 'http(s)://address(:port)(/path)'"
+              invalid: "the accepted format is 'scheme://address(:port)(/path)'. Accepted schemes are http, https, ws and wss"
             api_test_path:
               invalid: "only URI characters allowed"
             endpoint:
